// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fetcher > 200 OK! 1`] = `
{
  "body": [
    1,
    2,
    3,
  ],
  "headers": Headers {},
  "ok": true,
  "status": 200,
  "statusText": "OK",
  "url": Any<URL>,
}
`;

exports[`Fetcher > 200 empty content ala AWS lambda function URL 1`] = `
{
  "body": "",
  "headers": Headers {},
  "ok": true,
  "status": 200,
  "statusText": "OK",
  "url": Any<URL>,
}
`;

exports[`Fetcher > 204 1`] = `
{
  "body": null,
  "headers": Headers {},
  "ok": true,
  "status": 204,
  "statusText": "No Content",
  "url": Any<URL>,
}
`;

exports[`Fetcher > 204 empty content ala AWS lambda function URL 1`] = `
{
  "body": null,
  "headers": Headers {},
  "ok": true,
  "status": 204,
  "statusText": "No Content",
  "url": Any<URL>,
}
`;

exports[`Fetcher > 404 1`] = `
{
  "body": "<h1>Not Found</h1>",
  "headers": Headers {},
  "ok": false,
  "status": 404,
  "statusText": "Not Found",
  "url": Any<URL>,
}
`;

exports[`Fetcher > Custom options iso fetcher 1`] = `
{
  "body": {
    "accept": "*/*",
    "accept-encoding": "gzip, deflate",
    "accept-language": "*",
    "connection": "keep-alive",
    "host": "redacted",
    "sec-fetch-mode": "cors",
    "user-agent": "node",
    "x-fetcher": "custom",
  },
  "headers": Headers {},
  "ok": true,
  "status": 200,
  "statusText": "OK",
  "url": Any<URL>,
}
`;

exports[`Fetcher > JSON Error 1`] = `
{
  "body": {
    "code": 9,
    "message": "Data should be array",
    "status": "FAILED_PRECONDITION",
  },
  "headers": Headers {},
  "ok": false,
  "status": 400,
  "statusText": "Bad Request",
  "url": Any<URL>,
}
`;
